# opensource_contest_provenire

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.ko.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: false_positive.md  language_support.md
.github/action/: action.yml
.github/workflows/: ci.yml  provenire.yml
benchmarks/: RESULTS.md  evaluate.py  poc_winnowing.py
data/: copyleft.db
docs/: 01_구현계획.md  02_Windows_개발환경.md
docs/tasks/: README.md  T-01_java_language_pack.md  T-02_javascript_typescript_language_pack.md  T-03_scan_cli.md  T-04_git_diff_adapter.md  T-05_github_action.md  T-06_pypi_release.md
src/provenire/: __init__.py  cli.py
src/provenire/adapters/: __init__.py  git.py
src/provenire/core/: __init__.py  fingerprint.py  matcher.py  normalizer.py
src/provenire/index/: __init__.py  chunker.py  corpus.py  store.py
src/provenire/languages/: __init__.py  base.py  java.py  javascript.py  python.py  typescript.py
tests/: test_cli.py  test_core.py  test_corpus.py  test_git_adapter.py  test_index.py  test_languages.py  test_version.py
