[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenire"
version = "0.1.1"
description = "AI가 생성한 코드가 오픈소스 라이선스를 베꼈는지 PR에서 탐지하는 오픈소스 라이선스 게이트"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
# 두 사람 모두 email 을 적는다.
# PEP 621 은 email 이 있는 저자를 Author-email 로, 없는 저자를 Author 로 나눠 넣는다.
# 한쪽만 email 이 있으면 PyPI 페이지의 "Author" 에 email 없는 사람만 표시되어
# 실제 저자 구성과 다르게 보인다. (0.1.1 까지 Kim Minsu 만 Author 로 노출됐다)
authors = [
    { name = "Lee Woojin", email = "leemonta9482@gmail.com" },
    { name = "Kim Minsu", email = "minsoo0585@gmail.com" },
]
keywords = [
    "license-compliance", "code-provenance", "plagiarism-detection",
    "ai-generated-code", "copyleft", "gpl", "winnowing", "supply-chain-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pygments>=2.15",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "pre-commit"]

[project.urls]
Homepage = "https://github.com/4thIS/opensource_contest_provenire"
Repository = "https://github.com/4thIS/opensource_contest_provenire"
Issues = "https://github.com/4thIS/opensource_contest_provenire/issues"

[project.scripts]
provenire = "provenire.cli:main"

# 소스 배포판(sdist)에서 팀 내부 문서를 뺀다.
# docs/ 는 작업 지시서·구현계획·개발환경 안내라 패키지 사용자에겐 쓸모가 없다.
# (tests·benchmarks 는 남긴다 — 받은 사람이 검증·재현할 수 있어야 한다)
[tool.hatch.build.targets.sdist]
exclude = ["docs/"]

[tool.hatch.build.targets.wheel]
packages = ["src/provenire"]

# 카피레프트 지문 DB 를 wheel 에 동봉한다 — 저장소 구조(data/)는 그대로 두고
# 설치 시 <site-packages>/provenire/data/copyleft.db 로 들어가게 한다.
# 이게 있어야 `pip install provenire` 후 --index 없이도 scan 이 실제로 탐지한다.
# (해시+메타뿐이라 저작권 안전 — CLAUDE.md §4)
[tool.hatch.build.targets.wheel.force-include]
"data/copyleft.db" = "provenire/data/copyleft.db"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
